--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@aesop-fables/containr": "^0.2.0",
     "@aesop-fables/containr-react": "^0.2.0",
     "@aesop-fables/scrinium": "^0.3.3",
+    "@aws-amplify/ui-react": "^4.3.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,9 +14,11 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "aws-amplify": "^5.0.13",
     "axios": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "reflect-metadata": "^0.1.13",
     "web-vitals": "^2.1.4"
   },
